assets/objects/Service__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Total_maintenance__c</fullName>
        <description>Show the total number of Maintenance records for service</description>
        <label>Total maintenance</label>
        <summaryForeignKey>Maintance__c.Service__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>